--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,19 @@ p {
 .user-grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 250px 1fr;
-    grid-template-areas: "data action" "list list";
+    grid-template-rows: 250px 50px 1fr;
+    grid-template-areas: "data action" "pag pag" "list list";
 }
-
+.paginate {
+    grid-area: pag;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.paginate a{
+    margin: 5px;
+}
 .your-date {
     grid-area: data;
     border: 1px dotted #000000;
