--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,11 @@ p {
     font-weight: 900;
     color: #000000;
 }
+.title-small {
+    font-size: 14px;
+    font-weight: 900;
+    color: #000000;
+}
 
 .center {
     display: flex;
@@ -104,6 +109,16 @@ p {
     grid-template-rows: 250px 50px 1fr;
     grid-template-areas: "data action" "pag pag" "list list";
 }
+.user-update-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 250px  1fr;
+    grid-template-areas: "data action" "update req";
+}
+.show-request {
+    grid-area: req;
+    border: 1px dotted #000000;
+}
 .paginate {
     grid-area: pag;
     display: flex;
@@ -161,12 +176,14 @@ p {
 }
 
 .update {
+    grid-area: update;
+    border: 1px dotted #000000;
     display: flex;
     justify-content: center;
 }
 
 .update form {
-    width: 25%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -210,12 +227,13 @@ p {
     margin-top: 15px ;
     margin-bottom: 15px ;
 }
-.update-request {
+.message-request {
+    width: 100%;
     display: flex;
     justify-content: center;
 }
-.update-request div{
-    width: 30%;
+.message-request div{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
