--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,13 @@ p {
 }
 
 .form-row {
-    display: flex;
-    justify-content: space-between;
     width: 85%;
+}
+.form-row span{
+    margin-left: 5px;
+    min-width: 100px;
+    display: inline-block;
+    word-wrap: break-word
 }
 
 .repeat-pass {
@@ -113,7 +117,7 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 250px  1fr;
-    grid-template-areas: "data action" "update req";
+    grid-template-areas: "data action" "update update";
 }
 .show-request {
     grid-area: req;
@@ -183,14 +187,17 @@ p {
 }
 
 .update form {
-    width: 45%;
+    width: 41%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .update p {
-    margin-top: 20px ;
+    margin:  20px 0px 5px 0px;
+    display: flex;
+    /*justify-content: left;*/
+
 }
 .update-pass {
     display: flex;
@@ -250,8 +257,9 @@ p {
     justify-content: center;
     align-items: center;
 }
+
+/* убрать в дальнейшем */
 .show-request {
-    grid-area: req;
     display: flex;
     flex-direction: column;
     justify-content: center;
