--- a/css/styles.css
+++ b/css/styles.css
@@ -2,266 +2,46 @@ body {
     padding: 0;
     margin: 0;
 }
-.btn {
- margin: 15px;
-}
 p {
-    margin: 6px;
+    padding: 0;
+    margin: 0;
 }
-.red{
-    color: red;
+.wrapper {
+    margin: auto;
 }
-.invisible {
-    display: none;
+@media screen and (min-width: 1600px) {
+    .wrapper {
+        width: 1600px;
+    }
 }
-
-.title-big {
-    font-size: 30px;
-    font-weight: 900;
-    color: #000000;
+@media screen and (max-width: 1599px) {
+    .wrapper {
+        width: 1400px;
+    }
 }
-
-.title-medium {
-    font-size: 24px;
-    font-weight: 900;
-    color: #000000;
+@media screen and (max-width: 1400px) {
+    .wrapper {
+        width: 1200px;
+    }
 }
-.title-small {
-    font-size: 14px;
-    font-weight: 900;
-    color: #000000;
+@media screen and (max-width: 1400px) {
+    .wrapper {
+        width: 1200px;
+    }
 }
-
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 1200px) {
+    .wrapper {
+        width: 900px;
+    }
 }
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.3fr 1fr 0.5fr;
-    grid-template-areas: "mes mes" " aut reg" "req req";
+@media screen and (max-width: 900px) {
+    .wrapper {
+        width: 700px;
+    }
 }
-
-.registration {
-    grid-area: reg;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px dotted #000000;
-    padding: 25px;
+@media screen and (max-width: 700px) {
+    .wrapper {
+        width: 100%;
+    }
 }
-
-.registration form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-
-}
-
-.form-row {
-    width: 85%;
-}
-.form-row span{
-    margin-left: 5px;
-    min-width: 100px;
-    display: inline-block;
-    word-wrap: break-word
-}
-
-.repeat-pass {
-    width: 25%;
-}
-
-.autoresation {
-    grid-area: aut;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    border: 1px dotted #000000;
-    padding: 25px;
-}
-
-.autoresation form {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: center;
-
-}
-
-.message {
-    grid-area: mes;
-    border: 1px dotted #000000;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-.img-404 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.user-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 250px 50px 1fr;
-    grid-template-areas: "data action" "pag pag" "list list";
-}
-.user-update-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 250px  1fr;
-    grid-template-areas: "data action" "update update";
-}
-.show-request {
-    grid-area: req;
-    border: 1px dotted #000000;
-}
-.paginate {
-    grid-area: pag;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.paginate a{
-    margin: 5px;
-}
-.your-date {
-    grid-area: data;
-    border: 1px dotted #000000;
-    padding: 25px;
-}
-
-.actions-your-date {
-    grid-area: action;
-    border: 1px dotted #000000;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.user-list {
-    grid-area: list;
-    border: 1px dotted #000000;
-    padding: 25px;
-}
-
-.user-top-list {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr;
-    border-bottom: 3px solid #000000;
-    font-size: 22px;
-
-}
-
-.user-bottom-list {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr;
-    border-bottom: 2px dotted #000000;
-
-}
-
-.user-top-list span, .user-bottom-list span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.update {
-    grid-area: update;
-    border: 1px dotted #000000;
-    display: flex;
-    justify-content: center;
-}
-
-.update form {
-    width: 41%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.update p {
-    margin:  20px 0px 5px 0px;
-    display: flex;
-    /*justify-content: left;*/
-
-}
-.update-pass {
-    display: flex;
-    justify-content: center;
-}
-
-.update-pass form {
-    width: 22%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.update-pass p {
-    text-align: center;
-    margin-top: 20px ;
-}
-.delete {
-    display: flex;
-    justify-content: center;
-}
-.delete .title-medium{
-   margin-top: 50% ;
-}
-.delete form {
-    width: 30%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.delete p {
-    margin-top: 15px ;
-    margin-bottom: 15px ;
-}
-.message-request {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.message-request div{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.delete-request {
-    display: flex;
-    justify-content: center;
-}
-.delete-request div{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-/* убрать в дальнейшем */
-.show-request {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+/*добавить стили wrapper*/
