--- a/application/views/templates/main/css/template-styles.css
+++ b/application/views/templates/main/css/template-styles.css
@@ -32,7 +32,7 @@
     padding: .5em 2em;
     outline: none;
     border: 2px solid #b97a57;
-    border-radius: 1px;
+    border-radius: 10px;
     transition: 0.2s;
 }
 .btn:hover {
@@ -52,6 +52,9 @@ p {
 }
 .wrapper {
     background-color: #faebd7;
+    border: 2px solid #b97a57;
+    padding: 10px;
+
 }
 .input {
     margin: 5px;
@@ -60,69 +63,6 @@ p {
     border: 2px solid #b97a57;
     background-color:  #e6d7c3;
     border-radius: 10px;
-}
-.header .wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo-container {
-    width: 30%;
-    height: 150px;
-    border: 2px solid #b97a57;
-    background-image: url("/application/views/templates/main/img/logo.png");
-    background-position: center;
-    background-size: cover ;
-    background-repeat: no-repeat;
-}
-.menu {
-    border: 2px solid #b97a57;
-    width: 40%;
-    height: 150px;
-}
-.auth {
-    border: 2px solid #b97a57;
-    width: 30%;
-    height: 150px;
-}
-
-
-
-
-
-
-
-
-/* разобрать их по порядку и возможно где-то изменить названия*/
-.img-404 {
-    /* попробовать перенести вю эту историю в шаблон */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.3fr 1fr 0.5fr;
-    grid-template-areas: "mes mes" " aut reg" "req req";
-}
-
-.registration {
-    grid-area: reg;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px dotted #000000;
-    padding: 25px;
-}
-
-.registration form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-
 }
 .form-row {
     width: 85%;
@@ -133,19 +73,72 @@ p {
     display: inline-block;
     word-wrap: break-word
 }
+.header .wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px 10px 0 0 ;
+}
+.logo-container {
+    width: 30%;
+    height: 150px;
+    background-image: url("/application/views/templates/main/img/logo.png");
+    background-position: center;
+    background-size: cover ;
+    background-repeat: no-repeat;
+}
+.menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 40%;
+    height: 150px;
+}
+.auth {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 30%;
+    height: 150px;
+}
+.footer .wrapper{
+    height: 40px;
+    padding: 0 10px 0 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 0 0 10px 10px;
+}
+.img-404 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.img-404 img{
+    border-radius: 10px;
+}
 .repeat-pass {
-    /* понять что это вообще и зачем */
-    width: 25%;
+    width: 15%;
+}
+
+.main-grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.3fr 1fr 1fr;
+    grid-template-areas: "mes" "aut" "reg";
 }
 .autoresation {
     grid-area: aut;
     display: flex;
     justify-content: center;
     align-items: start;
-    border: 1px dotted #000000;
     padding: 25px;
 }
-
 .autoresation form {
     display: flex;
     flex-direction: column;
@@ -153,34 +146,38 @@ p {
     align-items: center;
 
 }
-
 .message {
     grid-area: mes;
-    border: 1px dotted #000000;
     display: grid;
     justify-content: center;
     align-items: center;
 }
-.user-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 250px 50px 1fr;
-    grid-template-areas: "data action" "pag pag" "list list";
-}
-.user-update-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 250px  1fr;
-    grid-template-areas: "data action" "update update";
-}
-.show-request {
-    /* узнать нужен ли он или нет*/
-    grid-area: req;
-    border: 1px dotted #000000;
+.registration {
+    grid-area: reg;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
 }
 
+.registration form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.registration form a{
+   margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+.user-grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 130px ;
+}
 .paginate {
-    grid-area: pag;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -189,59 +186,37 @@ p {
 .paginate a{
     margin: 5px;
 }
-.your-date {
-    grid-area: data;
-    border: 1px dotted #000000;
-    padding: 25px;
-}
-
-.actions-your-date {
-    grid-area: action;
-    border: 1px dotted #000000;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
 .user-list {
-    grid-area: list;
-    border: 1px dotted #000000;
     padding: 25px;
 }
-
 .user-top-list {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 1fr;
-    border-bottom: 3px solid #000000;
+    border-bottom: 3px solid #b97a57;
     font-size: 22px;
-
 }
-
 .user-bottom-list {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 1fr;
-    border-bottom: 2px dotted #000000;
+    border-bottom: 2px dotted #b97a57;
 
 }
-
 .user-top-list span, .user-bottom-list span {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
-
+.user-update-grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 250px ;
+}
 .update {
-    grid-area: update;
-    border: 1px dotted #000000;
     display: flex;
     justify-content: center;
 }
-
 .update form {
     width: 41%;
     display: flex;
@@ -252,20 +227,22 @@ p {
 .update p {
     margin:  20px 0px 5px 0px;
     display: flex;
-    /*justify-content: left;*/
-
+    align-items: center;
 }
 .update-pass {
     display: flex;
     justify-content: center;
 }
-
 .update-pass form {
     width: 22%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.update-pass form a{
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 .update-pass p {
     text-align: center;
@@ -274,6 +251,7 @@ p {
 .delete {
     display: flex;
     justify-content: center;
+    height: 450px;
 }
 .delete .title-medium{
     margin-top: 50% ;
@@ -286,12 +264,16 @@ p {
     justify-content: center;
     align-items: center;
 }
+.delete form a{
+  margin-top: 30px;
+}
 .delete p {
     margin-top: 15px ;
     margin-bottom: 15px ;
 }
 .message-request {
     width: 100%;
+    height: 450px;
     display: flex;
     justify-content: center;
 }
@@ -302,26 +284,6 @@ p {
     justify-content: center;
     align-items: center;
 }
-.delete-request {
-    display: flex;
-    justify-content: center;
-}
-.delete-request div{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-/* убрать в дальнейшем */
-.show-request {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-/* разобрать их по порядку и возможно где-то изменить названия возможно что-то удалить*/
 
 
 
